<resources>
    <string name="app_name">Alua</string>
    <string name="app_name_no_label"> </string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_library">Library</string>
    <string name="menu_news">News</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_exit">Exit</string>
    <string name="menu_profile_ru">Профиль</string>
    <string name="menu_library_ru">Библиотека</string>
    <string name="menu_news_ru">Новости</string>
    <string name="menu_settings_ru">Настройки</string>
    <string name="menu_exit_ru">Выход</string>
    <string name="menu_profile_kz">Профиль</string>
    <string name="menu_library_kz">Кітапхана</string>
    <string name="menu_news_kz">Жаңалықтар</string>
    <string name="menu_settings_kz">Функциялар</string>
    <string name="menu_exit_kz">Шығу</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="snow_queen_chapter1" formatted="false"><![CDATA[ <h2><font color=\'#28b5f5\'>Глава1.Зеркало
    и его осколки</font></h2>
    \t Ну, начнём! Дойдя до конца нашей истории, мы будем знать больше, чем теперь.
    Так вот, жил-был тролль, злющий-презлющий; то был сам дьявол.
    Раз он был в особенно хорошем расположении духа: он смастерил такое зеркало,
    в котором всё доброе и прекрасное уменьшалось донельзя, всё же негодное и безобразное,
    напротив, выступало ещё ярче, казалось ещё хуже. Прелестнейшие ландшафты выглядели в нём варёным шпинатом,
    а лучшие из людей — уродами, или казалось, что они стоят кверху ногами, а животов у них вовсе нет!
    Лица искажались до того, что нельзя было и узнать их; случись же у кого на лице веснушка или родинка,
    она расплывалась во всё лицо. Дьявола всё это ужасно потешало. Добрая, благочестивая человеческая мысль
    отражалась в зеркале невообразимой гримасой, так что тролль не мог не хохотать, радуясь своей выдумке.
    Все ученики тролля — у него была своя школа — рассказывали о зеркале, как о каком-то чуде. <br>\t
    — Теперь только, — говорили они, — можно увидеть весь мир и людей в их настоящем свете! <br>\t
    И вот они бегали с зеркалом повсюду; скоро не осталось ни одной страны, ни одного человека,
    которые бы не отразились в нём в искажённом виде. Напоследок захотелось им добраться и до неба,
    чтобы посмеяться над ангелами и самим Творцом. Чем выше поднимались они, тем сильнее кривлялось и
    корчилось зеркало от гримас; они еле-еле удерживали его в руках. Но вот они поднялись ещё, и вдруг
    зеркало так перекосило, что оно вырвалось у них из рук, полетело на землю и разбилось вдребезги.
    Миллионы, биллионы его осколков наделали, однако, ещё больше бед, чем самое зеркало.
    Некоторые из них были не больше песчинки, разлетелись по белу свету, попадали, случалось,
    людям в глаза и так там и оставались. Человек же с таким осколком в глазу начинал видеть
    всё навыворот или замечать в каждой вещи одни лишь дурные стороны, — ведь каждый осколок сохранял свойство,
        которым отличалось самое зеркало. Некоторым людям осколки попадали прямо в сердце, и это было хуже всего:
        сердце превращалось в кусок льда. Были между этими осколками и большие, такие, что их можно было
        вставить в оконные рамы, но уж в эти окна не стоило смотреть на своих добрых друзей. Наконец,
        были и такие осколки, которые пошли на очки, только беда была, если люди надевали их с целью
        смотреть на вещи и судить о них вернее! А злой тролль хохотал до колик, так приятно щекотал
        его успех этой выдумки. Но по свету летало ещё много осколков зеркала. Послушаем же про них.]]></string>
</resources>