<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item
        android:id="@+id/nav_profile"
        android:icon="@drawable/ic_menu_profile"
        android:title="@string/menu_profile" />
    <item
        android:id="@+id/nav_library"
        android:icon="@drawable/ic_menu_library"
        android:title="@string/menu_library" />
    <item
        android:id="@+id/nav_news"
        android:icon="@drawable/ic_menu_news"
        android:title="@string/menu_news" />
    <item
        android:id="@+id/nav_settings"
        android:icon="@drawable/ic_menu_settings"
        android:title="@string/action_settings" />
    <item
        android:id="@+id/nav_exit"
        android:icon="@drawable/ic_menu_exit"
        android:title="@string/menu_exit" />

</menu>
